--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -61,7 +61,8 @@
   transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+/*Se ele nao estiver disable!*/
+.countdownButton:not(:disabled):hover {
   background-color: var(--blue-dark);
 }
 
@@ -70,7 +71,21 @@
   color: var(--title);
 }
 
-.countdownButtonActive:hover {
+.countdownButtonActive:not(:disabled):hover {
   background: var(--red);
   color: var(--white);
+}
+
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+
+  border-bottom: 3px solid var(--green);
+  cursor: not-allowed;
+}
+
+.countdownButton:disabled img {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-left: 0.5rem;
 }
